--- a/style.css
+++ b/style.css
@@ -173,3 +173,26 @@ header .navbar li a:hover{
     color: rgb(45, 3, 74);
 }
 
+@media screen and (max-width: 992px) {
+    .contenido .tituloBox {
+        max-width: 400px; /* Ajusta el ancho máximo para dispositivos medianos */
+    }
+}
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px 10px; /* Ajusta el padding para dispositivos pequeños */
+    }
+
+    header .logo {
+        font-size: 1.2em; /* Reducido el tamaño de fuente para dispositivos pequeños */
+    }
+
+    .contenido .tituloBox {
+        max-width: 300px; /* Ajusta el ancho máximo para dispositivos pequeños */
+    }
+
+    .redesociales li {
+        font-size: 20px; /* Reducido el tamaño de fuente para dispositivos pequeños */
+    }
+}
