--- a/style.css
+++ b/style.css
@@ -173,12 +173,6 @@ header .navbar li a:hover{
     color: rgb(45, 3, 74);
 }
 
-@media screen and (max-width: 992px) {
-    .contenido .tituloBox {
-        max-width: 400px; /* Ajusta el ancho máximo para dispositivos medianos */
-    }
-}
-
 @media screen and (max-width: 576px) {
     header {
         padding: 20px 10px; /* Ajusta el padding para dispositivos pequeños */
@@ -189,7 +183,8 @@ header .navbar li a:hover{
     }
 
     .contenido .tituloBox {
-        max-width: 300px; /* Ajusta el ancho máximo para dispositivos pequeños */
+        max-width: 90%; /* Ajusta el ancho máximo para dispositivos pequeños */
+        margin: 0 auto; /* Centra horizontalmente */
     }
 
     .redesociales li {
