--- a/style.css
+++ b/style.css
@@ -173,6 +173,13 @@ header .navbar li a:hover{
     color: rgb(45, 3, 74);
 }
 
+@media screen and (max-width: 992px) {
+    .contenido .tituloBox {
+        max-width: 80%; /* Ajusta el ancho máximo para dispositivos medianos */
+        margin: 0 auto; /* Centra horizontalmente */
+    }
+}
+
 @media screen and (max-width: 576px) {
     header {
         padding: 20px 10px; /* Ajusta el padding para dispositivos pequeños */
@@ -185,6 +192,8 @@ header .navbar li a:hover{
     .contenido .tituloBox {
         max-width: 90%; /* Ajusta el ancho máximo para dispositivos pequeños */
         margin: 0 auto; /* Centra horizontalmente */
+        padding: 20px; /* Añade un poco de espacio interno */
+        font-size: 1.2em; /* Reducido el tamaño de fuente para dispositivos pequeños */
     }
 
     .redesociales li {
