--- a/Proyectos.css
+++ b/Proyectos.css
@@ -2,6 +2,9 @@
 
 
 body {
+   
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
     background-image: url('img/proyec.jpg');
     background-size: cover; 
