--- a/Proyectos.css
+++ b/Proyectos.css
@@ -3,15 +3,19 @@
 
 body {
    
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-image: url('img/proyec.jpg');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    height: 100vh; 
-  }
+
+        margin: 0;
+        padding: 0;
+        background-image: url('img/proyec.jpg');
+        background-size: cover; 
+        background-position: center; 
+        background-repeat: no-repeat; 
+        height: 100vh; /* Establece la altura del body al 100% del viewport height */
+        width: 100vw; /* Establece el ancho del body al 100% del viewport width */
+        overflow-x: hidden; /* Oculta la barra de desplazamiento horizontal si la imagen es más ancha que el viewport */
+    }
+    
+  
   
   header {
 margin-top: 40px;
