--- a/Proyectos.css
+++ b/Proyectos.css
@@ -68,7 +68,7 @@ margin-top: 40px;
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
