--- a/Proyectos.css
+++ b/Proyectos.css
@@ -68,10 +68,11 @@ margin-top: 40px;
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 10px;
+    padding: 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
     left: 30px;
+    margin-left: 10px;
   }
   
